# hackari

./: .dockerignore  .gitignore  .openclaude-profile.json  README.md  docker-compose.yml  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile  gen-env.sh
backend/entity/: Cargo.toml
backend/entity/src/: deadlines.rs  hackathon_skill.rs  hackathons.rs  invitations.rs  lib.rs  organizers.rs  prelude.rs  rating_criteria.rs  reports.rs  reset_code.rs  sessions.rs  skills.rs  submission_rating_scores.rs  submission_ratings.rs  submissions.rs  team_members.rs  teams.rs  tracks.rs  user_skills.rs  users.rs
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20240101_000001_create_users.rs  m20240101_000002_create_hackathons.rs  m20240101_000003_create_tracks.rs  m20240101_000004_create_teams.rs  m20240101_000005_create_team_members.rs  m20240101_000006_create_submissions.rs  m20240101_000007_create_deadlines.rs  m20240101_000008_create_invitations.rs  m20240101_000009_create_sessions.rs  m20240101_000010_create_password_reset_codes.rs  m20240101_000011_create_user_skills.rs  m20240101_000012_add_ai_tools_skills.rs  m20240101_000013_create_organizers.rs  m20240101_000014_add_hackathon_fields.rs  m20240101_000015_create_hackathon_skills.rs  m20240101_000016_add_organizer_terms_accepted_at_to_users.rs  m20240101_000017_create_rating_criteria.rs  m20240101_000018_create_submission_ratings.rs  m20240101_000019_create_submission_rating_scores.rs  m20240101_000020_delete_unverified_users.rs  m20240101_000021_add_admin_fields_to_users.rs  m20240101_000022_add_hackathon_status.rs  m20240101_000023_create_reports.rs  m20240101_000024_add_consent_fields_to_users.rs  m20240101_000025_add_rejection_reason_to_organizers.rs
backend/src/: main.rs
src/: App.vue  (+1 more)
(+114 files in other folders)
