[package]
name = "hackari-backend"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[workspace]
members = ["entity", "migration"]

[dependencies]
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9", features = ["typed-header", "cookie"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-native-tls", "with-uuid", "with-chrono"] }
entity = { path = "entity" }
migration = { path = "migration" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

dotenvy = "0.15"
thiserror = "1"
anyhow = "1"
validator = { version = "0.16", features = ["derive"] }
once_cell = "1"
hex = "0.4"
regex = "~1.9"
time = "=0.3.36"
url = "=2.4.1"
home = "=0.5.5"
reqwest = { version = "0.12", features = ["json"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls"] }
